packages/frontend/src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.grid-area-hero {
    grid-template-areas: "right-top" "left" "right";
}

.grid-area-left {
    grid-area: left;
}

.grid-area-right-top {
    grid-area: right-top;
}

.grid-area-right {
    grid-area: right;
}

.scrollbar-none {
    scrollbar-width: none;
}

.shadow-horizontal-scroller {
    box-shadow: inset 10px 0 10px var(--tw-shadow-color),
        inset -10px 0 10px var(--tw-shadow-color);
}

@media (min-width: 600px) {
    .grid-area-hero {
        grid-template-areas: "left right-top right-top" "left right right" "left right right";
    }
}

